Create a contract with a test

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,5 @@
 node_modules
+artifacts/build-info/bb3379189ddb51b7670d09cf6fd2f04a.json
+artifacts/contracts/ModifyVariable.sol/ModifyVariable.dbg.json
+artifacts/contracts/ModifyVariable.sol/ModifyVariable.json
+cache/solidity-files-cache.json
